# Apothecary

./: Cargo.toml  README.md
client/src/app/: page.tsx
contracts/dao/: Cargo.toml
contracts/dao-factory/: Cargo.toml
contracts/dao-factory/src/: lib.rs
contracts/dao/src/: lib.rs
contracts/payment-contract/: Cargo.toml
contracts/payment-contract-client/src/: lib.rs
contracts/payment-contract/src/: lib.rs
contracts/profit-distribution/: Cargo.toml
contracts/profit-distribution/src/: lib.rs
contracts/profit-token/: Cargo.toml
contracts/profit-token/src/: lib.rs
